# hsr-scanner

./: .eslintrc.cjs  .gitignore  .prettierrc  PotentialScore.md  README.md  Statistics.md  app.manifest  components.json  electron-builder.json5  floating.html  index.html  logs.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-lock.yaml.1611411192  tailwind.config.js  test_config.json  tsconfig.json  types.ts  vite.config.ts
backend/: check_assert_update.py  environment.yml  main.py  pyproject.toml  requirements.txt  screen_annotator.py  server.json
backend/app/: constant.py  life_span.py  logging_config.py
backend/app/assets/: checksum.json
backend/app/assets/character/: character_meta.json
backend/app/assets/configs/: model_config.json  stage_config.json  state_machine_config.json
backend/app/assets/database/: scanner.db
backend/app/assets/img_meta/: character_imgs.txt  relic_imgs.txt
backend/app/assets/relic/: relic_main_stats.json  relic_sets.json  relic_sub_stats.json
backend/app/assets/tesseract/: ambiguous_words.1.html  classifier_tester.1.html  cntraining.1.html  combine_lang_model.1.html  combine_tessdata.1.html  dawg2wordlist.1.html  lstmeval.1.html  (+11 more)
backend/app/core/: custom_exception.py  database.py  pipeline_executer.py  pipeline_factory.py  test.py
backend/app/dependencies/: connection_manager.py  detection.py  global_state.py  img_preprocess.py  ocr.py  rating_template.py  relic_match.py  relic_rating.py  screen_shot.py  template_en_decode.py
backend/app/models/: relic_info.py  yolo_box.py
backend/app/routers/: config.py  files.py  pipeline.py  rating_template.py  state.py  websocket.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
(+277 files in other folders)
