[package]
name = "app"
version = "4.0.2"
description = ""
authors = ["muma <wgr5600133@gmail.com>"]
license = ""
repository = "https://github.com/mumawQAQ/hsr-scanner"
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
tauri = { version = "1.7.2", features = ["shell-open", "updater", "window-set-always-on-top", "windows7-compat", "devtools"] }
regex = "1.10.6"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
